--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 			<div class="container">
   			<h1>Thomas Keel </h1>
   			<h3>-- Portfolio --  </h3>
+  			<p style="font-size:15px">
+  			<a href="https://www.linkedin.com/in/thomas-keel-819160127" target=_blank>LinkedIn</a>
+  			&nbsp&nbsp
+  			thom.keel394@outlook,com 
+  			&nbsp&nbsp 
+				<a href="https://github.com/ThomK1429" target=_blank>Github</a>
+  			</p>
   			<h4 style="font-style: italic;"> Tom is an experienced,  upbeat, dedicated,  computer professional.  His experience is well rounded in the software development, software technical support, software instruction and mentoring areas. </h4>
   		</div>
 		</div>
