--- a/index.html
+++ b/index.html
@@ -58,6 +58,26 @@
 		</div>
 
 	</div>
+
+	<div class="row text-center" style="padding-top:50px;">
+
+		<div class="col-xs-6 col-md-4">
+			<a href="https://fierce-mountain-60348.herokuapp.com/" target=_blank> <img src="crystals.jpg" style="width:250px;height:165px;"> </a>
+		</div>
+
+		<div class="col-xs-6 col-md-4">
+			<a href="https://young-retreat-15318.herokuapp.com/" target=_blank> <img src="hangman.jpg" style="width:250px;height:165px;"> </a>
+		</div>
+
+		<div class="col-xs-6 col-md-4">
+			<a href="#" target=_blank> <img src="http://placehold.it/250x165/ffffff/000000?text=Wait and see!" style="width:250px;height:165px;"> </a>
+		</div>
+
+	</div>
+
+
+
+
 </div>
 
 	</body>
