--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		</div>
 
 		<div class="col-xs-6 col-md-4">
-			<a href="#" target=_blank> <img src="http://placehold.it/250x165/ffffff/000000?text=Wait and see!" style="width:250px;height:165px;"> </a>
+			<a href="#"> <img src="http://placehold.it/250x165/ffffff/000000?text=Wait and see!" style="width:250px;height:165px;"> </a>
 		</div>
 
 	</div>
